Runtime/Scripts/BcsvNative.cs

// Copyright (c) 2025-2026 Tobias Weber. Licensed under the MIT License.
// Full P/Invoke coverage matching csharp/src/Bcsv/NativeMethods.cs.

using System;
using System.Runtime.InteropServices;
using UnityEngine.Scripting;

namespace BCSV
{
    public enum ColumnType
    {
        Bool   = 0,
        UInt8  = 1,
        UInt16 = 2,
        UInt32 = 3,
        UInt64 = 4,
        Int8   = 5,
        Int16  = 6,
        Int32  = 7,
        Int64  = 8,
        Float  = 9,
        Double = 10,
        String = 11
    }

    [System.Flags]
    public enum FileFlags
    {
        None           = 0,
        ZeroOrderHold  = 1 << 0,
        NoFileIndex    = 1 << 1,
        StreamMode     = 1 << 2,
        BatchCompress  = 1 << 3,
        DeltaEncoding  = 1 << 4,
    }

    public enum SamplerMode
    {
        Truncate = 0,
        Expand   = 1,
    }

    [Preserve]
    internal static class NativeMethods
    {
        const string Lib = "bcsv_c_api";

        // ── Version ────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_version();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int bcsv_version_major();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int bcsv_version_minor();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int bcsv_version_patch();

        // ── Error ──────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_last_error();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_clear_last_error();

        // ── Layout ─────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_layout_create();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_layout_clone(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_layout_destroy(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_layout_has_column(nint layout,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_layout_column_count(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern nuint bcsv_layout_column_index(nint layout,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_layout_column_name(nint layout, nuint index);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ColumnType bcsv_layout_column_type(nint layout, nuint index);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_layout_set_column_name(nint layout, nuint index,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_layout_set_column_type(nint layout, nuint index, ColumnType type);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_layout_add_column(nint layout, nuint index,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string name, ColumnType type);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_layout_remove_column(nint layout, nuint index);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_layout_clear(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_layout_is_compatible(nint layout1, nint layout2);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_layout_assign(nint dest, nint src);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_layout_column_count_by_type(nint layout, ColumnType type);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_layout_to_string(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_layout_row_data_size(nint layout);

        // ── Reader ─────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_reader_create();

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_reader_destroy(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_reader_open(nint reader,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_reader_open_ex(nint reader,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.U1)] bool rebuildFooter);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_reader_close(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_reader_is_open(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_reader_filename(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_reader_layout(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_reader_next(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_reader_read(nint reader, nuint index);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_reader_row(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_reader_index(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_reader_count_rows(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_reader_error_msg(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern byte bcsv_reader_compression_level(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int bcsv_reader_file_flags(nint reader);

        // ── Writer ─────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_writer_create(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_writer_create_zoh(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_writer_create_delta(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_writer_destroy(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_writer_close(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_writer_flush(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_writer_open(nint writer,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.U1)] bool overwrite,
            int compress, int blockSizeKb, int flags);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_writer_is_open(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_writer_filename(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_writer_layout(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_writer_next(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_writer_write(nint writer, nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_writer_row(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_writer_index(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_writer_error_msg(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern byte bcsv_writer_compression_level(nint writer);

        // ── Row ────────────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_row_create(nint layout);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_row_clone(nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_destroy(nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_clear(nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_assign(nint dest, nint src);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_row_layout(nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_row_column_count(nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_row_to_string(nint row);
